--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/AndrewKobzar/js-09.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Andrew Kobzar",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AndrewKobzar/js-09/issues"
